# principia

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: docs.yml
docs/: conf.py  index.rst  installation.rst  tech.rst
docs/agentic/frontend/: layout.rst
docs/agentic/services/: translator.rst
docs/api/: backend.rst  frontend.rst
docs/guides/: constitution_page.rst  goal.rst  main_page.rst  reinforcement_learning.rst  test_page.rst
src/principia/: main.py
src/principia/backend/api/: __init__.py  chat_state.py  constitution.py  dev.py  example_refinement_chat.py  examples.py  prompt_test_chat.py  router.py
src/principia/backend/chat/: __init__.py  example_refiner.py  prompt_tester.py
src/principia/backend/database/: __init__.py  constitution.py  dev.py  examples.py  workspace_json_file.py
src/principia/frontend/: language.py  theme.py
src/principia/frontend/components/: base_layout.py  supervised_learning_constitution_edit.py  supervised_learning_example_edit.py
src/principia/frontend/pages/: __init__.py  home.py  reinforcement_learning_main.py  supervised_learning_constitution_edit.py  supervised_learning_constitution_test.py  supervised_learning_main.py
src/principia/services/: __init__.py  openai_provider.py  translator.py
src/principia/services/i18n/: __init__.py  en.json  fr.json
src/principia/services/open_ai/: model_list.md  models.py
tests/principia/backend/api/: test_constitution.py  (+4 more)
tests/principia/services/: test_openai_provider.py  test_translator.py
(+3 files in other folders)
